<resources>
    <string name="user_app_name_lockerui_activity">--UNKWNOWN--</string>
    <string name="register_lockerui_activity">REGISTER</string>
    <string name="unlock_lockerui_activity">LOGIN</string>
    <string name="register_description_lockerui_activity">You have to be registered to use the application. You can choose auth. type after you enter your client nr. and password.</string>
    <string name="unlock_description_lockerui_activity">Application @string/user_app_name_lockerui_activity is locked. Unlock to continue.</string>
    <string name="register_button_lockerui_activity">REGISTER</string>
    <string name="unlock_button_lockerui_activity">LOGIN</string>
    <string name="security_register_activity">Security</string>
    <string name="security_description_register_activity">Choose the lock type.</string>
    <string name="pin_register_activity">USE PIN</string>
    <string name="fingerprint_register_activity">USE FINGERPRINT</string>
    <string name="gesture_register_activity">USE GESTURE</string>
    <string name="no_security_register_activity">WITHOUT SECURITY</string>
    <string name="new_pin_register_pin_activity">Input a new PIN</string>
    <string name="pin_unlock_pin_activity">Input your PIN.</string>
    <string name="wrong_pin_description_unlock_pin_activity">Wrong PIN. Remaining attempts: %1$d .</string>
    <string name="wrong_pin_description_change_password_pin_activity">PIN does not match, try it again</string>
    <string name="again_pin_register_pin_activity">Repeat the new PIN</string>
    <string name="wrong_pin_description_register_pin_activity">PIN does not match, try it again</string>
    <string name="title_gesture_fragment">Input gesture</string>
    <string name="title_again_gesture_fragment">Repeat gesture</string>
    <string name="description_tutorial_low_gesture_fragment">Your gesture should go trough at least %1$d points.</string>
    <string name="description_tutorial_gesture_fragment">Your gesture should go through at least %1$d points.</string>
    <string name="wrong_gesture_description_unlock_gesture_activity">Wrong gesture. Remaining attempts: %1$d </string>
    <string name="single_attempt_wrong_gesture_description_unlock_gesture_activity">Wrong gesture. Attempts left: %1$d</string>
    <string name="description_failure_gesture_fragment">Gestures does not match, please try it again.</string>
    <string name="description_failed_fingerprint_fragment">Unfortunately, it was not possible to verify your identity using your fingerprint.</string>
    <string name="description_in_progress_fingerprint_fragment">Fingerprint verification in progress, please wait.</string>
    <string name="description_migration_fingerprint_fragment">Fingerprint verification needed due to security reasons.</string>
    <string name="description_set_fingerprint_fragment">No fingerprint found in your device. You have to set your fingerprint security in the device settings first.</string>
    <string name="description_deleted_fingerprint_fragment">You were unregistered due to fingerprint settings changes.</string>
    <string name="title_fingerprint_fragment">Fingerprint</string>
    <string name="btn_fingerprint_set">SET FINGERPRINT</string>
    <string name="btn_fingerprint_repeat">AGAIN</string>
    <string name="btn_fingerprint_new_registration">NEW REGISTRATION</string>
    <string name="authorization_failed_result_activity">Login failed</string>
    <string name="registration_failed_result_activity">Registration failed</string>
    <string name="authorization_failed_description_result_activity">Unfortunately, your login was not successful due to the login attempts limit exceeding.</string>
    <string name="authorization_failed_unregistered_description_result_activity">Unfortunately, your login was not successful due to the configuration changes.</string>
    <string name="registration_failed_description_result_activity">Unfortunately, your registration failed. Please try it again.</string>
    <string name="spinlock_result_activity">Just a moment.</string>
    <string name="btn_new_registration_result_activity">REGISTER</string>
    <string name="registration_spinlock_result_activity">Your registration is in progress, please wait.</string>
    <string name="unlock_spinlock_result_activity">Login in progress, please wait.</string>
    <string name="check_spinlock_result_activity">Login in progress, please wait.</string>
    <string name="btn_change_security_info_activity">CHANGE SECURITY</string>
    <string name="btn_unregister_info_activity">UNREGISTER</string>
    <string name="dialog_unregister_title_info_activity">Unregister?</string>
    <string name="dialog_unregister_back_info_activity">Back</string>
    <string name="dialog_unregister_cancel_info_activity">UNREGISTER&#160;&#160;&#160;&#160;</string>
    <string name="info_title_info_activity">Settings</string>
    <string name="actual_lock_type_info_activity">Current login method is %1$s. </string>

    <string name="error_repeat">Repeat</string>
    <string name="network_error_title">Network connection error</string>
    <string name="network_error_message">Try to connect and retry.</string>
    <string name="different_error_title">Unexpected error ocurred.</string>
    <string name="different_error_message">Retry later, please</string>

    <string name="lock_type_pin">PIN</string>
    <string name="lock_type_gesture">Gesture</string>
    <string name="lock_type_fingerprint">Fingerprint</string>
    <string name="lock_type_none">Without security</string>

    <string name="pin_number_one">1</string>
    <string name="pin_number_two">2</string>
    <string name="pin_number_three">3</string>
    <string name="pin_number_four">4</string>
    <string name="pin_number_five">5</string>
    <string name="pin_number_six">6</string>
    <string name="pin_number_seven">7</string>
    <string name="pin_number_eight">8</string>
    <string name="pin_number_nine">9</string>
    <string name="pin_number_zero">0</string>
    <string name="pin_text_two">ABC</string>
    <string name="pin_text_three">DEF</string>
    <string name="pin_text_four">GHI</string>
    <string name="pin_text_five">JKL</string>
    <string name="pin_text_six">MNO</string>
    <string name="pin_text_seven">PQRS</string>
    <string name="pin_text_eight">TUV</string>
    <string name="pin_text_nine">WXYZ</string>
    <string name="pin_delete">DELETE</string>

    <string name="navigation_back_content_description">Navigation back</string>
    <string name="navigation_bar_content_description">Navigation bar</string>
    <string name="locker_ui_fragment_content_description">This page initiates the registration or unlock process. </string>
    <string name="register_fragment_content_description">This page provides the registration lock type selection. Please select your lock type.</string>
    <string name="pin_fragment_content_description">This page allows to input PIN to register or unlock.</string>
    <string name="pin_fragment_content_repeat_description">This page allows to repeat PIN to register or unlock.</string>
    <string name="fingerprint_fragment_content_description">This page provides fingerprint verification. Please place your finger on the fingerprint scanner of your device.</string>
    <string name="result_fragment_content_description">This is registration or unlock progress page.</string>
    <string name="result_failure_fragment_content_description">This is registration or result page. Something went wrong.</string>
    <string name="info_fragment_content_description">This page allows to unregister or change lock type.</string>
    <string name="switch_button_description">This button switch the landscape screen.</string>

</resources>
