<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_register_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:contentDescription="@string/register_fragment_content_description"
    android:orientation="vertical"
    android:padding="10dip">

    <Button
        android:id="@+id/btn_no_security_register_activity"
        android:layout_width="350dip"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip"
        android:background="@drawable/button_round_dark_blue"
        android:drawableLeft="@drawable/button_no_safety"
        android:drawablePadding="20dip"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dip"
        android:text="@string/no_security_register_activity"
        android:textColor="@color/csasColorWhite"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_gesture_register_activity"
        android:layout_width="350dip"
        android:layout_height="50dip"
        android:layout_above="@id/btn_no_security_register_activity"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip"
        android:background="@drawable/button_round_dark_blue"
        android:drawableLeft="@drawable/button_gesture"
        android:drawablePadding="20dip"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dip"
        android:text="@string/gesture_register_activity"
        android:textColor="@color/csasColorWhite"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_fingerprint_register_activity"
        android:layout_width="350dip"
        android:layout_height="50dip"
        android:layout_above="@id/btn_gesture_register_activity"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip"
        android:background="@drawable/button_round_dark_blue"
        android:drawableLeft="@drawable/button_fingerprint"
        android:drawablePadding="20dip"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dip"
        android:text="@string/fingerprint_register_activity"
        android:textColor="@color/csasColorWhite"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_pin_register_activity"
        android:layout_width="350dip"
        android:layout_height="50dip"
        android:layout_above="@id/btn_fingerprint_register_activity"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip"
        android:background="@drawable/button_round_dark_blue"
        android:drawableLeft="@drawable/button_dots"
        android:drawablePadding="20dip"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dip"
        android:text="@string/pin_register_activity"
        android:textColor="@color/csasColorWhite"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_pin_register_activity"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/tv_security_register_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dip"
            android:gravity="center_horizontal"
            android:text="@string/security_register_activity"
            android:textColor="@color/csasColorWhite"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_security_register_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_security_register_activity"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dip" />


        <TextView
            android:id="@+id/tv_security_description_register_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_security_register_activity"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dip"
            android:gravity="center_horizontal"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/security_description_register_activity"
            android:textColor="@color/csasColorWhite"
            android:textSize="16sp" />
    </RelativeLayout>


</RelativeLayout>